// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traceJunitArtifact test failed junit spans match snapshot: trace-junit-error 1`] = `
Array [
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      19000053,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "20",
      "traceFlags": 1,
      "traceId": "20",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.name resource is workflow name",
      "test.name": "createTracerProvider test service.name resource is workflow name",
      "test.scope": "Case",
      "test.time": 0.019,
    },
    "endTime": Array [
      1643762231,
      19000053,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.name resource is workflow name",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      23000002,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "21",
      "traceFlags": 1,
      "traceId": "21",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.name resource is workflow id",
      "test.failure.0.inner": "

Expected: 1
Received: \\"1\\"
    at Object.<anonymous> (/Users/nick/work/otel-export-trace-action/src/tracing/trace.test.ts:51:7)
    at Promise.then.completed (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/utils.js:391:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/utils.js:316:10)
    at _callCircusTest (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/run.js:218:40)
    at processTicksAndRejections (internal/process/task_queues.js:97:5)
    at _runTest (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/run.js:155:3)
    at _runTestsForDescribeBlock (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/run.js:66:9)
    at _runTestsForDescribeBlock (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/run.js:60:9)
    at run (/Users/nick/work/otel-export-trace-action/node_modules/jest-circus/build/run.js:25:3)",
      "test.failure.0.message": "Error: expect(received).toEqual(expected) // deep equality",
      "test.name": "createTracerProvider test service.name resource is workflow id",
      "test.scope": "Case",
      "test.time": 0.023,
    },
    "endTime": Array [
      1643762231,
      23000002,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.name resource is workflow id",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      2000093,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "22",
      "traceFlags": 1,
      "traceId": "22",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.instance.id resource",
      "test.name": "createTracerProvider test service.instance.id resource",
      "test.scope": "Case",
      "test.time": 0.002,
    },
    "endTime": Array [
      1643762231,
      2000093,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.instance.id resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      2000093,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "23",
      "traceFlags": 1,
      "traceId": "23",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.namespace resource",
      "test.name": "createTracerProvider test service.namespace resource",
      "test.scope": "Case",
      "test.time": 0.002,
    },
    "endTime": Array [
      1643762231,
      2000093,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.namespace resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      2000093,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "24",
      "traceFlags": 1,
      "traceId": "24",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test active span processor",
      "test.name": "createTracerProvider test active span processor",
      "test.scope": "Case",
      "test.time": 0.002,
    },
    "endTime": Array [
      1643762231,
      2000093,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test active span processor",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      2,
      492000103,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "19",
      "traceFlags": 1,
      "traceId": "19",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.errors": 0,
      "test.failures": 1,
      "test.name": "createTracerProvider",
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 5,
      "test.time": 2.492,
      "test.timestamp": "2022-02-01T18:37:11",
    },
    "endTime": Array [
      1643762233,
      492000103,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      999928,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "26",
      "traceFlags": 1,
      "traceId": "26",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "listWorkflowRunArtifacts test WorkflowArtifactDownload return to be defined",
      "test.name": "listWorkflowRunArtifacts test WorkflowArtifactDownload return to be defined",
      "test.scope": "Case",
      "test.time": 0.001,
    },
    "endTime": Array [
      1643762234,
      999928,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "listWorkflowRunArtifacts test WorkflowArtifactDownload return to be defined",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "27",
      "traceFlags": 1,
      "traceId": "27",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "listWorkflowRunArtifacts test WorkflowArtifactDownload path exists",
      "test.name": "listWorkflowRunArtifacts test WorkflowArtifactDownload path exists",
      "test.scope": "Case",
      "test.time": 0,
    },
    "endTime": Array [
      1643762234,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "listWorkflowRunArtifacts test WorkflowArtifactDownload path exists",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      158999920,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "25",
      "traceFlags": 1,
      "traceId": "25",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "listWorkflowRunArtifacts",
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 2,
      "test.time": 0.159,
      "test.timestamp": "2022-02-01T18:37:14",
    },
    "endTime": Array [
      1643762234,
      158999920,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "listWorkflowRunArtifacts",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      3999949,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "29",
      "traceFlags": 1,
      "traceId": "29",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "traceTestReportArtifact test report type not supported",
      "test.name": "traceTestReportArtifact test report type not supported",
      "test.scope": "Case",
      "test.time": 0.004,
    },
    "endTime": Array [
      1643762234,
      3999949,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact test report type not supported",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      9000063,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "30",
      "traceFlags": 1,
      "traceId": "30",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "traceTestReportArtifact test junit spans match snapshot",
      "test.name": "traceTestReportArtifact test junit spans match snapshot",
      "test.scope": "Case",
      "test.time": 0.009,
    },
    "endTime": Array [
      1643762234,
      9000063,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact test junit spans match snapshot",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      552000046,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "28",
      "traceFlags": 1,
      "traceId": "28",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "traceTestReportArtifact",
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 2,
      "test.time": 0.552,
      "test.timestamp": "2022-02-01T18:37:14",
    },
    "endTime": Array [
      1643762234,
      552000046,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762234,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      3,
      384999990,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "18",
      "traceFlags": 1,
      "traceId": "18",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.errors": 0,
      "test.failures": 1,
      "test.name": "jest tests",
      "test.scope": "Run",
      "test.tests": 9,
      "test.type": "junit",
      "tests.time": 3.385,
    },
    "endTime": Array [
      1643762234,
      384999990,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "jest tests",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      3,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "17",
      "traceFlags": 1,
      "traceId": "17",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {},
    "endTime": Array [
      1643762234,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1643762231,
      0,
    ],
    "status": Object {
      "code": 0,
    },
  },
]
`;

exports[`traceJunitArtifact test junit testsuite pass: trace-junit-testsuite-pass 1`] = `
Array [
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      13000011,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "13",
      "traceFlags": 1,
      "traceId": "13",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.name resource",
      "test.name": "createTracerProvider test service.name resource",
      "test.scope": "Case",
      "test.time": 0.013,
    },
    "endTime": Array [
      1642848330,
      13000011,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.name resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      29000044,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "14",
      "traceFlags": 1,
      "traceId": "14",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.instance.id resource",
      "test.name": "createTracerProvider test service.instance.id resource",
      "test.scope": "Case",
      "test.time": 0.029,
    },
    "endTime": Array [
      1642848330,
      29000044,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.instance.id resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      2000093,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "15",
      "traceFlags": 1,
      "traceId": "15",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.namespace resource",
      "test.name": "createTracerProvider test service.namespace resource",
      "test.scope": "Case",
      "test.time": 0.002,
    },
    "endTime": Array [
      1642848330,
      2000093,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.namespace resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      3000021,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "16",
      "traceFlags": 1,
      "traceId": "16",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test active span processor",
      "test.name": "createTracerProvider test active span processor",
      "test.scope": "Case",
      "test.time": 0.003,
    },
    "endTime": Array [
      1642848330,
      3000021,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test active span processor",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      46999931,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "12",
      "traceFlags": 1,
      "traceId": "12",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 4,
    },
    "endTime": Array [
      1642848330,
      46999931,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": undefined,
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "11",
      "traceFlags": 1,
      "traceId": "11",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "Junit Test Runs",
      "test.scope": "Run",
      "test.tests": 4,
      "test.type": "junit",
    },
    "endTime": Array [
      1642848330,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "Junit Test Runs",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      4,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "10",
      "traceFlags": 1,
      "traceId": "10",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {},
    "endTime": Array [
      1642848334,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 0,
    },
  },
]
`;

exports[`traceJunitArtifact test junit testsuites pass: trace-junit-testsuites-pass 1`] = `
Array [
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      13000011,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "4",
      "traceFlags": 1,
      "traceId": "4",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.name resource",
      "test.name": "createTracerProvider test service.name resource",
      "test.scope": "Case",
      "test.time": 0.013,
    },
    "endTime": Array [
      1642848330,
      13000011,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.name resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      29000044,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "5",
      "traceFlags": 1,
      "traceId": "5",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.instance.id resource",
      "test.name": "createTracerProvider test service.instance.id resource",
      "test.scope": "Case",
      "test.time": 0.029,
    },
    "endTime": Array [
      1642848330,
      29000044,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.instance.id resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      2000093,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "6",
      "traceFlags": 1,
      "traceId": "6",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test service.namespace resource",
      "test.name": "createTracerProvider test service.namespace resource",
      "test.scope": "Case",
      "test.time": 0.002,
    },
    "endTime": Array [
      1642848330,
      2000093,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test service.namespace resource",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      3000021,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "7",
      "traceFlags": 1,
      "traceId": "7",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "createTracerProvider test active span processor",
      "test.name": "createTracerProvider test active span processor",
      "test.scope": "Case",
      "test.time": 0.003,
    },
    "endTime": Array [
      1642848330,
      3000021,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider test active span processor",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      3,
      581000090,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "3",
      "traceFlags": 1,
      "traceId": "3",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "createTracerProvider",
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 4,
      "test.time": 3.581,
    },
    "endTime": Array [
      1642848333,
      581000090,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "createTracerProvider",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      999928,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "9",
      "traceFlags": 1,
      "traceId": "9",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": true,
      "test.classname": "traceTestReportArtifact test junit.xml",
      "test.name": "traceTestReportArtifact test junit.xml",
      "test.scope": "Case",
      "test.time": 0.001,
    },
    "endTime": Array [
      1642848333,
      999928,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact test junit.xml",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848333,
      0,
    ],
    "status": Object {
      "code": 2,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      0,
      177999973,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "8",
      "traceFlags": 1,
      "traceId": "8",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "traceTestReportArtifact",
      "test.scope": "Suite",
      "test.skipped": 0,
      "test.tests": 1,
      "test.time": 0.178,
      "test.timestamp": "2022-01-22T04:45:33",
    },
    "endTime": Array [
      1642848333,
      177999973,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848333,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      3,
      759000063,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "2",
      "traceFlags": 1,
      "traceId": "2",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {
      "error": false,
      "test.errors": 0,
      "test.failures": 0,
      "test.name": "jest tests",
      "test.scope": "Run",
      "test.tests": 5,
      "test.type": "junit",
    },
    "endTime": Array [
      1642848333,
      759000063,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "jest tests",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_attributeValueLengthLimit": Infinity,
    "_duration": Array [
      4,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "1",
      "traceFlags": 1,
      "traceId": "1",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "attributeValueLengthLimit": Infinity,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        SimpleSpanProcessor {
          "_exporter": InMemorySpanExporter {
            "_finishedSpans": [Circular],
            "_stopped": false,
          },
          "_isShutdown": false,
          "_shuttingDownPromise": Promise {},
        },
      ],
    },
    "attributes": Object {},
    "endTime": Array [
      1642848334,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "traceTestReportArtifact",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "traceTestReportArtifact",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "1.0.1",
      },
    },
    "startTime": Array [
      1642848330,
      0,
    ],
    "status": Object {
      "code": 0,
    },
  },
]
`;
